# anima-ros2-bridge

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: bridge.md  tron1-demo.md
anima_bridge/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  openclaw_plugin.py  transport_manager.py
anima_bridge/commands/: __init__.py  estop.py  transport_cmd.py
anima_bridge/context/: __init__.py  robot_context.py
anima_bridge/discovery/: __init__.py  fingerprint.py  scanner.py
anima_bridge/safety/: validator.py
anima_bridge/tools/: __init__.py  ros2_action.py  ros2_camera.py  ros2_introspect.py  ros2_param.py  ros2_publish.py  ros2_service.py  ros2_subscribe.py
anima_bridge/transport/: __init__.py  base.py  direct_dds.py  entity_cache.py  factory.py  types.py
anima_bridge/transport/rosbridge/: __init__.py  adapter.py  client.py
anima_discovery/: __init__.py  discovery_node.py  package.xml  setup.py
anima_msgs/: CMakeLists.txt  package.xml
anima_msgs/msg/: AnimaCapabilities.msg
anima_msgs/srv/: GetCapabilities.srv
assets/: hero.html
docker/: .env.example  Dockerfile.bridge  Dockerfile.ros2  Dockerfile.sim  Dockerfile.tron1  bridge_entrypoint.sh  docker-compose.dds.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.sim.yml  docker-compose.tron1.yml  docker-compose.viewer.yml  docker-compose.ws.yml  docker-compose.yml  ros2_entrypoint.sh  start_sim.sh
docker/tron1_launch/: CMakeLists.txt  package.xml
docker/tron1_launch/launch/: tron1_sim.launch.py
docker/viewer/: index.html
docs/: architecture.md  cli-reference.md  discovery.md  quickstart.md  safety.md  simulation.md
sim/TRON1/TRON1A/PF_TRON1A/urdf/: robot_clean.urdf
sim/TRON1/TRON1A/WF_TRON1A/meshes/: abad_L_Link.STL  abad_R_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL  wheel_L_Link.STL  wheel_R_Link.STL
sim/tron1_urdf/PF_P441C/meshes/: abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
sim/tron1_urdf/PF_P441C2/meshes/: abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
sim/worlds/: warehouse.sdf  warehouse_sensors.sdf
tests/unit/: test_config.py  test_safety_validator.py  test_tools.py  test_transport_types.py
