[project]
name = "anima-ros2-bridge"
version = "0.1.0"
description = "Direct DDS bridge between ANIMA Intelligence Compiler and ROS2 robots"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Proprietary — AIFLOW LABS LIMITED" }
requires-python = ">=3.12"
authors = [
    { name = "AIFLOW LABS LIMITED", email = "ilessio@aiflowlabs.io" },
]

dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    "mcap>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
webrtc = [
    "aiortc>=1.6",
    "httpx>=0.27",
]

[project.scripts]
anima-bridge = "anima_bridge.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anima_bridge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["anima_bridge"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "ros2: requires ROS2 installation",
    "docker: requires Docker",
    "slow: slow tests",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
