<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Copyright (c) 2026 AIFLOW LABS LIMITED / RobotFlowLabs -->
<package format="3">
  <name>anima_discovery</name>
  <version>0.1.0</version>
  <description>ANIMA ROS2 discovery node that publishes robot capability manifests.</description>
  <maintainer email="ilessio@aiflowlabs.io">AIFLOW LABS LIMITED</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>anima_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
