<?xml version="1.0"?>
<package format="3">
  <name>tron1_bringup</name>
  <version>0.1.0</version>
  <description>TRON1 biped simulation launch for ANIMA ROS2 Bridge demo</description>
  <maintainer email="ilessio@aiflowlabs.io">AIFLOW LABS LIMITED</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
